--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,4 @@
+@import "font-awesome";
 @import "config/colors";
 @import "config/font-size";
 @import "config/reset";
@@ -5,4 +6,5 @@
 @import "mixins/vendor_prefix";
 @import "modules/side_bar";
 @import "modules/chat";
+@import "modules/user";
 @import "messages/messages.scss"
