--- a/app/assets/stylesheets/config/reset.scss
+++ b/app/assets/stylesheets/config/reset.scss
@@ -8,9 +8,15 @@
     TODO will need to remove settings on HTML since we can't namespace it.
     TODO with the prefix, should I group by selector or property for weight savings?
 */
+* {
+  box-sizing: border-box;
+}
+
 html{
   color:#000;
   background:#FFF;
+  height: 100%;
+  width: 100%;
 }
 /*
   TODO remove settings on BODY since we can't namespace it.
@@ -19,7 +25,12 @@ html{
   TODO test putting a class on HEAD.
       - Fails on FF.
 */
-body,
+body{
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+}
 div,
 dl,
 dt,
