--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,10 +1,10 @@
-.message
+.message{data: {messageId: message.id}}
   .upper-message
     .upper-message__user-name
       = message.user.name
     .upper-message__date
       = message.created_at.strftime("%Y/%m/%d %H:%M")
-  .lower-message{data: {messageId: message.id}}
+  .lower-message
     - if message.content.present?
       %p.lower-message__content
         = message.content
