--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -5,7 +5,7 @@
   .chat
     .header
       .left-header
-        .left-header__title
+        .left-header__title{data: {groupId: @group.id}}
           = @group.name
         %ul.left-header__members
           Member：
