--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -9,15 +9,12 @@
           = @group.name
         %ul.left-header__members
           Member：
-          %li.member
-            メンバー名
-          %li.member
-            メンバー名
-          %li.member
-            メンバー名
+          - @group.users.each do |user|
+            =user.name
       .right-header
-        .right-header__button
-          Edit
+        =link_to edit_group_path(@group.id) do
+          .right-header__button
+            Edit
     .messages
       = render @messages
     .form
