--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -25,12 +25,7 @@
       .chat-group-form__field--right__current
         = current_user.name
       #chat-group-users
-        - @group.users.each do |user|
-          - if user.name != current_user.name
-            .chat-group-user.clearfix.js-chat-member
-              %input{name: "group[user_ids][]", type: "hidden", value: user.id}/
-              %p.chat-group-user__name= user.name
-              %a.user-search-remove.chat-group-user__btn.chat-group-user__btn--remove.js-remove-btn 削除
+        =render partial: "user", collection: @users
 
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
