--- a/app/assets/stylesheets/modules/chat.scss
+++ b/app/assets/stylesheets/modules/chat.scss
@@ -30,7 +30,7 @@
       line-height: 40px;
       margin-top: 28px;
       padding: 0 20px;
-      &__button {
+      &__button,a {
         color: $light_blue;
         text-decoration: none;
       }
